--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "prop-types": "^15.6.0",
     "react": "16.0.0",
-    "react-native": "0.50.3"
+    "react-native": "0.50.3",
+    "reactotron-react-native": "^1.13.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.2",
