--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "0.50.3",
+    "react-native-vector-icons": "^4.4.2",
     "reactotron-react-native": "^1.13.2"
   },
   "devDependencies": {
