--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "apisauce": "^0.14.1",
     "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "0.50.3",
