--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-native-vector-icons": "^4.4.2",
+    "react-navigation": "^1.0.0-beta.21",
     "reactotron-react-native": "^1.13.2"
   },
   "devDependencies": {
